[gd_scene load_steps=27 format=2]

[ext_resource path="res://Art/Building/PAGE/build_page_1_1.png" type="Texture" id=1]
[ext_resource path="res://Script/Building/s_engine_paper.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Pieces/Head.tscn" type="PackedScene" id=3]
[ext_resource path="res://Art/Building/PAGE/build_page_1_2.png" type="Texture" id=4]
[ext_resource path="res://Art/Building/PAGE/build_page_1_3.png" type="Texture" id=5]
[ext_resource path="res://Art/Building/PAGE/build_page_2_2.png" type="Texture" id=6]
[ext_resource path="res://Art/Building/PAGE/build_page_2_3.png" type="Texture" id=7]
[ext_resource path="res://Art/Building/PAGE/build_page_3_3.png" type="Texture" id=8]
[ext_resource path="res://Art/Building/PAGE/title_page_1.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Artistic/text_title_1.tres" type="DynamicFont" id=10]
[ext_resource path="res://Script/Building/s_paper_navigation.gd" type="Script" id=11]
[ext_resource path="res://Art/Building/Scarabocchi/scara_2.png" type="Texture" id=12]
[ext_resource path="res://Art/Building/Scarabocchi/scara_1.png" type="Texture" id=13]
[ext_resource path="res://Art/Building/Scarabocchi/scara_5.png" type="Texture" id=14]
[ext_resource path="res://Art/Building/Scarabocchi/scara_3.png" type="Texture" id=15]
[ext_resource path="res://Art/Building/Scarabocchi/scara_4.png" type="Texture" id=16]
[ext_resource path="res://Audio/Effects/drop2.wav" type="AudioStream" id=17]
[ext_resource path="res://Audio/Effects/drop3.wav" type="AudioStream" id=18]
[ext_resource path="res://Audio/Effects/drop1.wav" type="AudioStream" id=19]
[ext_resource path="res://Audio/Effects/drop4.wav" type="AudioStream" id=20]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "2_2",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "2_3",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "1_2",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "1_1",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "3_3",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "1_3",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 56.3033, 258.488 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 23.0268, 85.5314 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 87.8763, 104.008 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 119.985, 139.685 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 130.688, 178.928 )

[node name="EnginePaper" type="Node2D"]
script = ExtResource( 2 )

[node name="Title" type="Sprite" parent="."]
position = Vector2( -48.7088, -333.405 )
texture = ExtResource( 9 )

[node name="TitleLabel" type="Label" parent="."]
margin_left = -143.0
margin_top = -375.0
margin_right = 55.0
margin_bottom = -316.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.32549, 0.0666667, 0.0196078, 1 )
text = "Engine"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Paper" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="Sprite" type="AnimatedSprite" parent="Paper"]
frames = SubResource( 1 )
animation = "3_3"

[node name="Prev" type="Area2D" parent="Paper"]

[node name="Collision" type="CollisionShape2D" parent="Paper/Prev"]
position = Vector2( 183.527, 1.05943 )
shape = SubResource( 2 )

[node name="Next" type="Area2D" parent="Paper"]

[node name="Collision" type="CollisionShape2D" parent="Paper/Next"]
position = Vector2( -225.027, -148.21 )
shape = SubResource( 3 )

[node name="Border" type="Area2D" parent="."]
visible = false
collision_layer = 1024
collision_mask = 1024

[node name="1" type="CollisionPolygon2D" parent="Border"]
position = Vector2( -831.561, -489.946 )
build_mode = 1
polygon = PoolVector2Array( 872.88, 516.515, 872.88, 309.593, 690.931, 306.025, 690.931, 517.704 )
disabled = true

[node name="2" type="CollisionPolygon2D" parent="Border"]
visible = false
position = Vector2( -831.561, -489.946 )
build_mode = 1
polygon = PoolVector2Array( 903.799, 597.381, 901.421, 313.16, 658.822, 309.593, 656.444, 598.57 )

[node name="3" type="CollisionPolygon2D" parent="Border"]
visible = false
position = Vector2( -831.561, -489.946 )
build_mode = 1
polygon = PoolVector2Array( 913.313, 673.49, 913.313, 311.971, 645.741, 310.782, 648.12, 673.49 )

[node name="Area" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 1024

[node name="1" type="CollisionShape2D" parent="Area"]
visible = false
position = Vector2( -48.936, -77.534 )
shape = SubResource( 4 )

[node name="2" type="CollisionShape2D" parent="Area"]
position = Vector2( -52.5037, -34.7226 )
shape = SubResource( 5 )

[node name="3" type="CollisionShape2D" parent="Area"]
visible = false
position = Vector2( -51.3144, 2.14283 )
shape = SubResource( 6 )

[node name="Pieces1" type="Node2D" parent="."]
visible = false

[node name="scara_2" type="Sprite" parent="Pieces1"]
position = Vector2( -161.713, -84.8922 )
texture = ExtResource( 12 )

[node name="scara_1" type="Sprite" parent="Pieces1"]
position = Vector2( 64.2367, -92.0275 )
texture = ExtResource( 13 )

[node name="scara_3" type="Sprite" parent="Pieces1"]
position = Vector2( -51.1164, 60.191 )
rotation = 3.22188
texture = ExtResource( 15 )

[node name="scara_4" type="Sprite" parent="Pieces1"]
position = Vector2( -49.9271, 126.787 )
texture = ExtResource( 16 )

[node name="scara_5" type="Sprite" parent="Pieces1"]
position = Vector2( -48.738, 180.301 )
texture = ExtResource( 14 )

[node name="Pieces2" type="Node2D" parent="."]
visible = false

[node name="scara_1" type="Sprite" parent="Pieces2"]
position = Vector2( -79.0841, 178.034 )
rotation = 1.18159
texture = ExtResource( 13 )

[node name="scara_4" type="Sprite" parent="Pieces2"]
position = Vector2( -51.5381, 174.855 )
texture = ExtResource( 16 )

[node name="scara_5" type="Sprite" parent="Pieces2"]
position = Vector2( -53.657, 125.06 )
texture = ExtResource( 14 )

[node name="Pieces3" type="Node2D" parent="."]

[node name="Head" parent="." instance=ExtResource( 3 )]
position = Vector2( -48.8638, -176.006 )
scale = Vector2( 0.7, 0.7 )
disable_drag = true
is_head = true

[node name="Audio" type="Node" parent="."]

[node name="DropPiece1" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 19 )
bus = "Player Sounds"

[node name="DropPiece2" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 17 )
bus = "Player Sounds"

[node name="DropPiece3" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 18 )
bus = "Player Sounds"

[node name="DropPiece4" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 20 )
bus = "Player Sounds"
[connection signal="dropped" from="." to="." method="_on_EnginePaper_dropped"]
[connection signal="change_engine" from="Paper" to="." method="_on_Paper_change_engine"]
[connection signal="mouse_entered" from="Paper/Prev" to="Paper" method="_on_Prev_mouse_entered"]
[connection signal="mouse_exited" from="Paper/Prev" to="Paper" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Paper/Next" to="Paper" method="_on_Next_mouse_entered"]
[connection signal="mouse_exited" from="Paper/Next" to="Paper" method="_on_mouse_exited"]
